<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL" Id="{44602dc2-980d-4205-96da-817de17836e4}">
    <Declaration><![CDATA[VAR_GLOBAL
	EL1008_01 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_02 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_03 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_04 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_05 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_06 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_07 AT%I* : ARRAY [0..7] OF BOOL;
	EL1008_08 AT%I* : ARRAY [0..7] OF BOOL;
	
	EL2008_01 AT%Q* : ARRAY [0..7] OF BOOL;
	EL2008_02 AT%Q* : ARRAY [0..7] OF BOOL;
	EL2008_03 AT%Q* : ARRAY [0..7] OF BOOL;
	EL2008_04 AT%Q* : ARRAY [0..7] OF BOOL;
	EL2008_05 AT%Q* : ARRAY [0..7] OF BOOL;
	
	EL4004_01 AT%Q* : ARRAY [0..3] OF INT;
	EL4004_02 AT%Q* : ARRAY [0..3] OF INT;
	EL4004_03 AT%Q* : ARRAY [0..3] OF INT;
	EL4004_04 AT%Q* : ARRAY [0..3] OF INT;
	
	
END_VAR
VAR_GLOBAL CONSTANT
	MAX_ROOM: INT := 3;
	T_LONG_PRESS: TIME := T#2S;
	RAMP_UP_TIME : TIME := T#5S;
	RAMP_DOWN_TIME : TIME := T#5S;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>